...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/text_ProfileHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif"
...
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_Progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_Achievements"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:text="@string/progress"
        android:visibility="visible" />

    <Button
...
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@color/colorAccent"
        android:text="@string/achievements"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_Reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_Achievements"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:background="@color/Black"
        android:text="@string/reset"
...
